Fix ul/li whitespace

--- a/lesscss/components/statblock.less
+++ b/lesscss/components/statblock.less
@@ -134,6 +134,9 @@
 
   .power-content {
     white-space: pre-line;
+    ul, li {
+      white-space: normal;
+    }
   }
 
   .AC,
